--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -139,6 +139,9 @@ body {
     background-color: rgba(255, 255, 255, 0.05);
     border: 1px solid rgba(255, 255, 255, 0.1);
     color: var(--text-primary);
+    option{
+        background-color: var(--furia-dark);
+    }
 }
 
 .form-select:focus {
